# thermonitor

./: .dockerignore  .gitignore  Dockerfile  README.md  environment.yaml  thermonitor.sh
aviader/: weather-data.txt
go/: LICENSE  README.md
go/src/telemetry/: README.md  samconfig.toml
go/src/telemetry/constants/: constants.go  tokens.go
go/src/telemetry/lambdas/bydevice/: main.go
go/src/telemetry/lambdas/bylocation/: main.go
go/src/telemetry/lambdas/byproject/: main.go
go/src/telemetry/lambdas/requestauth/: main.go  requestauth.go
go/src/telemetry/utils/: dynamo.go
js/aviader/: app.js  package.json  sync-app.js
py/: README.md  requirements.txt  setup.py
py/src/thermonitor/: .thermonitor.conf  config.py  context.py  detail.py  edit.py  help.py  keylistener.py  log.txt  move.py  nonblocking.py  normal.py  sensor.py  sensors.py  state.py  thermonitor.py  utils.py
rs/: README.md
rs/sensor/: Cargo.toml
rs/sensor/src/: main.rs
sensor/src/: main.rs
src/thermonitor/: config.py  context.py  detail.py  edit.py  figlettext.py  help.py  input.py  keylistener.py  log.py  log.txt  move.py  nonblocking.py  normal.py  plot.py  sensor.py  sensors.py  state.py  thermonitor.py  utils.py
src/thermonitor.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
telemetry/: go.mod  go.sum  template.yaml
telemetry/lambdas/bylocation/: main.go
telemetry/lambdas/byproject/: main.go
telemetry/tests/: post_test.py
telemetry/utils/: dynamo.go
tools/: get-data.py
