[package]
name = "sensor"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aht20 = "0.1.0"
chrono = "0.4.19"
embedded-hal = "0.2.6"
linux-embedded-hal = "0.3.2"
openssl = { version = "0.10", features = ["vendored"] }
reqwest = { version = "0.11.6", features = ["json", "blocking"] }
serde = "1.0.71"
